[gd_scene load_steps=12 format=3 uid="uid://cj6b1r8b6jel3"]

[ext_resource type="PackedScene" uid="uid://dpaxvlnn2u1f6" path="res://material_maker/panels/preview_3d/preview_3d.tscn" id="1"]
[ext_resource type="Script" uid="uid://f81isnxjqrub" path="res://material_maker/panels/preview_3d/preview_3d_panel.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://bqre7xkdgb655" path="res://material_maker/environments/hdris/moonless_golf_1k.hdr" id="3_j6uuq"]
[ext_resource type="PackedScene" uid="uid://rflulhsuy3ax" path="res://material_maker/widgets/float_edit/float_edit.tscn" id="4_dlxub"]

[sub_resource type="Shader" id="1"]
code = "shader_type spatial;
render_mode unshaded;

uniform vec3 aabb_position;
uniform vec3 aabb_size;
varying vec3 position;

void vertex() {
	position = (VERTEX-aabb_position)/aabb_size;
}

void fragment() {
	ALBEDO = position;
}"

[sub_resource type="ShaderMaterial" id="2"]
render_priority = 0
shader = SubResource("1")
shader_parameter/aabb_position = Vector3(0, 0, 0)
shader_parameter/aabb_size = Vector3(0, 0, 0)

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_40ogr"]
panorama = ExtResource("3_j6uuq")

[sub_resource type="Sky" id="Sky_wye7d"]
sky_material = SubResource("PanoramaSkyMaterial_40ogr")

[sub_resource type="Environment" id="Environment_qxxdb"]
background_mode = 1
background_color = Color(1, 1, 1, 0)
sky = SubResource("Sky_wye7d")
ambient_light_source = 3
reflected_light_source = 2

[sub_resource type="World3D" id="World3D_3xlky"]
environment = SubResource("Environment_qxxdb")

[sub_resource type="ButtonGroup" id="ButtonGroup_p1u4i"]

[node name="Preview3D" instance=ExtResource("1")]
custom_minimum_size = Vector2(250, 200)
offset_left = -1.0
offset_top = -2.0
offset_right = 248.0
offset_bottom = 253.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3")
click_material = SubResource("2")

[node name="BG" type="Panel" parent="." index="0"]
show_behind_parent = true
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"MM_PanelBackground"

[node name="MaterialPreview" parent="." index="1"]
world_3d = SubResource("World3D_3xlky")
size = Vector2i(250, 256)

[node name="TextureRect" type="TextureRect" parent="." index="2"]
visible = false
layout_mode = 2
mouse_filter = 2
expand_mode = 1

[node name="PopupMenu" type="PopupMenu" parent="." index="3"]
size = Vector2i(215, 100)
item_count = 3
item_0/text = "Center on clicked surface"
item_0/id = 1
item_1/text = "Reset center"
item_1/id = 0
item_2/text = "Reset rotation"
item_2/id = 2

[node name="MenuBar" type="ScrollContainer" parent="." index="4"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
theme_type_variation = &"MM_PanelMenuBackground"
horizontal_scroll_mode = 3
vertical_scroll_mode = 0

[node name="HBox" type="HFlowContainer" parent="MenuBar" index="0"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Speed_Pause" parent="MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/Model/RotationSpeeds" index="0"]
button_group = SubResource("ButtonGroup_p1u4i")

[node name="Speed_Slow" parent="MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/Model/RotationSpeeds" index="1"]
button_group = SubResource("ButtonGroup_p1u4i")

[node name="Speed_Medium" parent="MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/Model/RotationSpeeds" index="2"]
button_group = SubResource("ButtonGroup_p1u4i")

[node name="Speed_Fast" parent="MainMenu/HBox/ModelMenu/ModelMenuPanel/VBoxContainer/Model/RotationSpeeds" index="3"]
button_group = SubResource("ButtonGroup_p1u4i")

[node name="ExposureLabel" type="Label" parent="MainMenu/HBox/EnvironmentMenu/EnvironmentMenuPanel/VBoxContainer/VBox" index="4"]
layout_mode = 2
theme_type_variation = &"MM_PanelMenuSubPanelLabel"
text = "Exposure"

[node name="Exposure" parent="MainMenu/HBox/EnvironmentMenu/EnvironmentMenuPanel/VBoxContainer/VBox" index="5" instance=ExtResource("4_dlxub")]
layout_mode = 2
value = 1.0
max_value = 16.0
step = 0.01
float_only = true

[node name="WhiteLabel" type="Label" parent="MainMenu/HBox/EnvironmentMenu/EnvironmentMenuPanel/VBoxContainer/VBox" index="6"]
layout_mode = 2
theme_type_variation = &"MM_PanelMenuSubPanelLabel"
text = "White"

[node name="White" parent="MainMenu/HBox/EnvironmentMenu/EnvironmentMenuPanel/VBoxContainer/VBox" index="7" instance=ExtResource("4_dlxub")]
layout_mode = 2
value = 1.0
max_value = 16.0
step = 0.01
float_only = true

[connection signal="mouse_entered" from="." to="." method="_on_Preview3D_mouse_entered"]
[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="id_pressed" from="PopupMenu" to="." method="_on_PopupMenu_id_pressed"]
[connection signal="value_changed" from="MainMenu/HBox/EnvironmentMenu/EnvironmentMenuPanel/VBoxContainer/VBox/Exposure" to="." method="_on_exposure_value_changed"]
[connection signal="value_changed" from="MainMenu/HBox/EnvironmentMenu/EnvironmentMenuPanel/VBoxContainer/VBox/White" to="." method="_on_white_value_changed"]
